--- a/Template/css/main.css
+++ b/Template/css/main.css
@@ -53,7 +53,7 @@ display: flex;
 
 /*_CONTENT_________________________________________________________________*/
 .content {
-    display: ruby;
+    display: flex;
 
     position: relative;
     margin: 0 auto;
