--- a/Template/css/main.css
+++ b/Template/css/main.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #d9d9d9;
+    background-color: #e7e7e7;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -17,7 +17,7 @@ html, body {
     z-index: 9;
 
 
-    background-color: black;
+    background-color: powderblue;
 }
 
 #header2 {
@@ -77,8 +77,8 @@ display: flex;
     width: 100%;
     height: 80px;
 
-    background-color: black;
-    color: white;
+    background-color: powderblue;
+    color: black;
 }
 
 
