--- a/class/Template/css/main.css
+++ b/class/Template/css/main.css
@@ -72,6 +72,7 @@ display: flex;
 /*_FOOTER___________________________________________________________________*/
 .footer {
     position: absolute;
+    display: flex;
     bottom: 0; left: 0;
 
     width: 100%;
@@ -81,12 +82,19 @@ display: flex;
     color: black;
 }
 
+#login {
+    background-color: cornflowerblue;
+    border-color: blue;
+    margin-right: 20px;
+}
 
+#logout {
+    background-color: darkgray;
+    border-color: black;
+    margin-right: 20px;
+}
 
 #copyright {
-    position: absolute;
-    margin: 20px;
-    bottom: 0;
-    right: 0;
+    margin-top: 10px;
 }
 
