Reorganisation des fichiers, maj sidebar

--- a/class/Template/css/main.css
+++ b/class/Template/css/main.css
@@ -98,3 +98,10 @@ display: flex;
     margin-top: 10px;
 }
 
+/*_SIDEBAR___________________________________________________________________*/
+
+#sidebar{
+    margin-top: 4%;
+    position: center;
+    color: red;
+}
