--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,66 @@
-#type_search {
-    margin-left: 20px;
-    margin-right: 20px;
+#filtres {
+    position: absolute;
+    width: 300px;
+    height: 90vh;
+
+    display: ruby;
+    border-right: solid black;
 }
+
+/*__________Selection_ingredients__________*/
+#filtre_ingredients {
+    position: absolute;
+    height: 50%;
+    width: 100%;
+}
+
+#search_ingredient {
+    width: 90%;
+    height: 25px;
+    margin: 10px;
+}
+
+.checkbox_ingredient {
+    position: absolute;
+    margin-left: 10px;
+    margin-right: 10px;
+    max-height: 40vh;
+    width: 93%;
+
+    overflow: auto;
+
+}
+/*_____________Selection_tags______________*/
+#filtre_tags {
+    position: absolute;
+    bottom: 0;
+    height: 50%;
+    width: 100%;
+}
+
+#search_tag {
+    width: 90%;
+    height: 25px;
+    margin: 10px;
+}
+
+.checkbox_tag {
+    position: absolute;
+    margin-left: 10px;
+    margin-right: 10px;
+    max-height: 32vh;
+    width: 93%;
+
+    overflow: auto;
+
+}
+
+
+/*________________________________________________________________________________________*/
+#reste_page {
+    margin-left: 300px;
+}
+
 
 .search {
     display: flex;
