--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,7 +4,7 @@
     height: 90vh;
 
     display: ruby;
-    border-right: solid black;
+    border-right: solid powderblue;
 }
 
 /*__________Selection_ingredients__________*/
