--- a/CSS/login.css
+++ b/CSS/login.css
@@ -44,6 +44,7 @@
 .submit {
     background-color: cornflowerblue;
     border-color: blue;
+    border-radius: 100px;
 
     display: block;
     margin-left: auto;
