--- a/CSS/add.css
+++ b/CSS/add.css
@@ -1,3 +1,14 @@
+.errortext{
+    position: absolute;
+
+    font-size: 3em;
+    z-index: 10;
+
+    text-align: center;
+    margin-top: 30%;
+    width: 100%;
+}
+
 #filtres {
     position: absolute;
     width: 300px;
@@ -27,7 +38,7 @@
 }
 
 #add_bouton_ingr {
-    background-color: aqua;
+
 }
 
 .form_ingredient {
@@ -82,6 +93,24 @@
 
     vertical-align: middle;
 }
+ .qte_div {
+    display: flex;
+     height: 20px;
+     width: 90px;
+ }
+
+.quantite {
+    width: 40px;
+    height: 14px;
+}
+
+.unite {
+    width: 500px;
+    height:20px;
+    line-height:20px;
+}
+
+
 /*_____________Selection_tags______________*/
 #filtre_tags {
     position: absolute;
@@ -146,6 +175,7 @@
 }
 
 #legend {
+    margin-left: 300px;
     text-align: center;
     font-size: 3em;
 
@@ -153,27 +183,27 @@
 }
 
 .submit{
-    position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
 
-    font-size: 2.5em;
-    height: 75px;
+    font-size: 1em;
+    height: 65px;
     width: 150px;
 
     background-color: cornflowerblue;
     border-color: blue;
-    border-radius: 50px;
+    border-radius: 15px;
 
 }
 
 .form-group {
     display: ruby;
     margin: 20px;
-    margin-left: 30%;
+    margin-left: 320px;
     font-size: 1.5em;
     margin-bottom: 90px;
 }
+
 /*____*/
 #img {
     margin-top: 25px;
@@ -214,7 +244,7 @@
     resize: none;
     font-size: 1.2em;
     margin-top: 10px;
-    width: 99.3%;
+    width: 100%;
     height: 150px;
 }
 
@@ -229,9 +259,9 @@
     resize: none;
     font-size: 1.2em;
     margin-top: 10px;
-    margin-bottom: 80px;
-    width: 99.3%;
-    height: 250px;
+    margin-bottom: 50px;
+    width: 100%;
+    height: 300px;
 }
 
 /*_____________Erreurs______________*/
