--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 #filtres {
     position: absolute;
     width: 300px;
-    height: 85%;
+    height: 90%;
 
     padding-bottom: 80px;
 
@@ -16,7 +16,7 @@ label {
 /*__________Selection_ingredients__________*/
 #filtre_ingredients {
     position: absolute;
-    height: 40%;
+    height: 50%;
     width: 100%;
 }
 
@@ -31,7 +31,7 @@ label {
 
     margin-left: 10px;
     margin-right: 10px;
-    max-height: 30vh;
+    height: 37vh;
     width: 93%;
 
 
@@ -41,7 +41,8 @@ label {
 /*_____________Selection_tags______________*/
 #filtre_tags {
     position: absolute;
-    top: 40%;
+
+    top: 50%;
     height: 35%;
     width: 100%;
 
@@ -57,18 +58,17 @@ label {
     position: absolute;
     margin-left: 10px;
     margin-right: 10px;
-    max-height: 32vh;
+    height: 25vh;
     width: 93%;
 
     overflow: auto;
-
 }
 
 /*_____________Selection_trie______________*/
 #trie {
     position: absolute;
     width: 268px;
-    top:75%;
+    top:86%;
     margin-left: 10px;
 }
 
@@ -83,14 +83,14 @@ label {
 /*________________________________________________________________________________________*/
 #reste_page {
     margin-left: 300px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
-/*________________Recherche_________________*/
+/*___________________Recette____________________*/
 .search {
     display: flex;
 
-    padding-top: 10px;
+    padding-top: 5px;
     margin-left: 20px;
     margin-right: 20px;
 }
@@ -103,14 +103,11 @@ label {
     width: 250px;
 }
 
-
-
 #liste_recette {
-    max-height: 78%;
+    max-height: 83%;
 
     position: absolute;
     overflow: auto;
-
 }
 
 .recette {
@@ -124,8 +121,8 @@ label {
 
 .bouton_image_recette {
     visibility: hidden;
-    margin: 5px;
-    background-color: aqua;
+    margin-top: 4px;
+    margin-bottom: 2px;
 }
 
 .image_recette {
@@ -134,17 +131,17 @@ label {
 
     height: 250px;
     width: 250px;
-
 }
 
 .text_ingr {
     margin-top: 10px;
     margin-right: 20px;
+
 }
 
 .bouton_admin {
     display: flex;
+    position: absolute;
+    height: 25px;
 
-    margin-top: 5px;
-    margin-right: 5px;
 }
