--- a/CSS/login.css
+++ b/CSS/login.css
@@ -42,8 +42,8 @@
 }
 
 .submit {
-    background-color: cornflowerblue;
-    border-color: blue;
+    background-color: #c95a49;
+    border-color: saddlebrown;
     border-radius: 100px;
 
     display: block;
