--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,14 +1,3 @@
-#filtres {
-    position: absolute;
-    width: 300px;
-    height: 90%;
-
-    padding-bottom: 80px;
-
-    display: ruby;
-    border-right: solid powderblue;
-}
-
 label {
     margin-left: 5px;
 }
@@ -114,7 +103,7 @@ label {
 }
 
 .recette {
-    background-color: lightgray;
+    background-color: #a6483a;
     border: black;
     border-radius: 10px;
 
@@ -126,7 +115,7 @@ label {
     visibility: hidden;
     margin-top: 4px;
     margin-bottom: 2px;
-    background-color: aqua;
+    background-color: #c95a49;
 }
 
 .image_recette {
@@ -147,4 +136,5 @@ label {
     display: flex;
     position: absolute;
     height: 25px;
+    gap:5px;
 }
