--- a/class/Template/css/main.css
+++ b/class/Template/css/main.css
@@ -1,11 +1,11 @@
 html, body {
-    background-image: url("../img/Fond.png");
+    background-image: url("../img/Fond.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 50%;
 }
 
 /*_HEADER_________________________________________________________________*/
@@ -20,7 +20,7 @@ html, body {
     z-index: 9;
 
 
-    background-color: powderblue;
+    background-color: #c95a49;
 }
 
 #header2 {
@@ -48,7 +48,7 @@ html, body {
 .button_header {
     color: black;
     font-size: 1.5vh;
-    background-color: powderblue;
+    background-color: #c95a49;
     border: none;
     margin: 0;
 
@@ -57,14 +57,13 @@ html, body {
 }
 
 #login {
-    background-color: powderblue;
+    background-color: #c95a49;
     margin-left: 85%;
     width: 15%;
     border: none;
 }
-
 #logout {
-    background-color: darkgray;
+    background-color: #a6483a;
     width: 15%;
     border: none;
 }
@@ -97,10 +96,40 @@ html, body {
     width: 100%;
     height: 45px;
 
-    background-color: powderblue;
+    background-color: #c95a49;
     color: black;
 }
 
 #copyright {
     margin: 10px;
+}
+
+/*_BOUTON_EDIT_DELETE_ADD____________________________________________________*/
+
+
+.button_edit{
+    background-color: seagreen;
+    border-radius: 15%;
+}
+
+.button_delete{
+    background-color: #cf1f1c;
+    border-radius: 15%;
+}
+
+/*_FORM_EDIT_ADD______________________________________________________________*/
+
+.form-group{
+    padding-top: 10%;
+}
+
+#filtres {
+    position: absolute;
+    width: 300px;
+    height: 90%;
+
+    padding-bottom: 80px;
+
+    display: ruby;
+    border-right: solid #a6483a;
 }
