--- a/CSS/add.css
+++ b/CSS/add.css
@@ -1,9 +1,7 @@
 #filtres {
     position: absolute;
-    width: 300px;
-    height: 90%;
-
-    padding-bottom: 80px;
+    width: 400px;
+    height: 90vh;
 
     display: ruby;
     border-right: solid saddlebrown;
@@ -77,12 +75,12 @@
 
 .divgap{
     display: flex;
-    gap:30px;
+    gap:0px;
 }
 
 .labelIngr{
     display: flex;
-    width: 65px;
+    width: 180px;
 }
 
 .qte_div {
@@ -104,7 +102,6 @@
 
 .bouton_modif {
     display: flex;
-    right: 0;
     gap : 5px;
     vertical-align: middle;
 }
@@ -112,7 +109,7 @@
 #filtre_tags {
     position: absolute;
     top: 50%;
-    height: 40%;
+    height: 45%;
     width: 100%;
 }
 
@@ -158,7 +155,6 @@
     width: 93%;
 
     overflow: auto;
-
 }
 
 .tag{
@@ -167,42 +163,19 @@
 
 /*________________________________________________________________________________________*/
 #reste_page {
-    margin-left: 300px;
-    margin-bottom: 0px;
+    margin-left: 400px;
 }
 
-#legend {
-    display: flex;
-    text-align: center;
-    font-size: 2.5em;
-    color: darkred;
-}
-
-.submit{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-
-    font-size: 1em;
-    height: 65px;
-    width: 150px;
-
-    background-color: #c95a49;
-    border-color: saddlebrown;
-    border-radius: 15px;
-
-}
 
 .form-group {
     display: ruby;
-    margin: 20px;
-    margin-left: 320px;
+    margin-left: 420px;
+    margin-right: 20px;
     font-size: 1.5em;
-    margin-bottom: 90px;
 }
+
 /*____*/
 #img {
-    margin-top: 25px;
     width: 100%;
     display: block;
     text-align: start;
@@ -211,6 +184,7 @@
 #input_img {
     font-size: 1.2em;
     margin-left: 20px;
+    margin-top: 20px;
     width: 60%;
 }
 
@@ -255,9 +229,22 @@
     resize: none;
     font-size: 1.2em;
     margin-top: 10px;
-    margin-bottom: 50px;
     width: 100%;
     height: 300px;
+}
+/*____*/
+
+.submit{
+    margin-bottom: 50px;
+    margin-top: 10px;
+
+    font-size: 2em;
+    height: 65px;
+    width: 100%;
+
+    background-color: #c95a49;
+    border-color: saddlebrown;
+    border-radius: 15px;
 }
 
 /*_____________Erreurs______________*/
